--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/avatar-profile/avatar-profile.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/avatar-profile/avatar-profile.component.scss
@@ -19,7 +19,7 @@
     height: 70px;
     width: 70px;
 	border-radius: var(--ov-video-radius);
-	border: 2px solid var(--ov-text-color);
+	border: 2px solid var(--ov-text-primary-color);
 	color: #000000;
 }
 
