--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/media-element/media-element.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/media-element/media-element.component.scss
@@ -3,7 +3,7 @@ video {
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
-	color: #ffffff;
+	color: var(--ov-text-primary-color);
 	margin: 0;
 	padding: 0;
 	border: 0;
