--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/broadcasting-activity/broadcasting-activity.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/broadcasting-activity/broadcasting-activity.component.html
@@ -1,4 +1,9 @@
-<mat-expansion-panel (opened)="setPanelOpened(true)" (closed)="setPanelOpened(false)" [expanded]="expanded" [ngClass]="{ 'no-body': !isPanelOpened }">
+<mat-expansion-panel
+	(opened)="setPanelOpened(true)"
+	(closed)="setPanelOpened(false)"
+	[expanded]="expanded"
+	[ngClass]="{ 'no-body': !isPanelOpened }"
+>
 	<mat-expansion-panel-header>
 		<mat-list>
 			<mat-list-item>
