--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/settings/audio-devices/audio-devices.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/settings/audio-devices/audio-devices.component.scss
@@ -1,9 +1,12 @@
-:host {
-	--ov-light-color-darker: color-mix(in srgb, var(--ov-light-color), #000 15%);
+$ov-selection-color: #d4d6d7;
 
+:host {
 	.device-container-element {
-		border-radius: var(--ov-panel-radius);
-		border: 1px solid var(--ov-light-color-darker);
+		border-radius: var(--ov-surface-radius);
+		border: 1px solid $ov-selection-color;
+	}
+	.device-container-element.mute-btn {
+		border: 1px solid var(--ov-error-color);
 	}
 	#audio-devices-form {
 		width: 100%;
@@ -15,7 +18,7 @@
 	}
 
 	#microphone-button {
-		color: var(--ov-secondary-color);
+		color:#000000
 	}
 
 	::ng-deep .mat-mdc-text-field-wrapper,
@@ -31,15 +34,15 @@
 	::ng-deep .mat-mdc-text-field-wrapper {
 		padding-left: 0px;
 		padding-right: 10px;
-		background-color: var(--ov-panel-background) !important;
-		border-radius: var(--ov-panel-radius);
+		background-color: var(--ov-surface-color) !important;
+		border-radius: var(--ov-surface-radius);
 	}
 	::ng-deep .mdc-button--unelevated {
-		border-top-left-radius: var(--ov-panel-radius);
-		border-bottom-left-radius: var(--ov-panel-radius);
+		border-top-left-radius: var(--ov-surface-radius);
+		border-bottom-left-radius: var(--ov-surface-radius);
 		border-bottom-right-radius: 0px !important;
 		border-top-right-radius: 0px !important;
-		background-color: var(--ov-light-color-darker) !important;
+		background-color: $ov-selection-color !important;
 		width: 48px !important;
 		min-width: 48px !important;
 		padding: 0;
@@ -72,13 +75,28 @@
 	}
 
 	::ng-deep .mat-mdc-button-touch-target {
-		border-radius: var(--ov-panel-radius) !important;
+		border-radius: var(--ov-surface-radius) !important;
 	}
 
-	.warn-btn {
-		color: var(--ov-warn-color) !important;
+	.mute-btn {
+		color: #ffffff !important;
+		background-color: var(--ov-error-color) !important;
 	}
 }
 ::ng-deep .mat-mdc-select-panel {
-	background-color: var(--ov-panel-background) !important;
+	background-color: var(--ov-surface-color) !important;
+}
+
+::ng-deep .mat-mdc-option {
+	padding: 10px 10px !important;
+}
+
+::ng-deep .mat-mdc-form-field.mat-focused .mat-mdc-select-arrow {
+	color: var(--ov-primary-action-color) !important;
+}
+::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple::after {
+	border-bottom-color: var(--ov-primary-action-color) !important;
+}
+::ng-deep .mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled):not(.mat-mdc-option-multiple) {
+	background-color: $ov-selection-color !important;
 }
